--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,17 +2,30 @@
 layout: compress
 ---
 
+{% include base_path %}
+
 <!doctype html>
 <html lang="{{ site.locale | slice: 0,2 }}" class="no-js">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page.title }}</title>
+    {% include head.html %}
+    {% include head/custom.html %}
   </head>
 
   <body>
-    <div id="main" role="main">
-      {{ content }}
+
+    {% include browser-upgrade.html %}
+    {% include masthead.html %}
+
+    {{ content }}
+
+    <div class="page__footer">
+      <footer>
+        {% include footer/custom.html %}
+        {% include footer.html %}
+      </footer>
     </div>
+
+    {% include scripts.html %}
+
   </body>
 </html>
